--- a/Werkstuk versie 3.tex
+++ b/Werkstuk versie 3.tex
@@ -420,7 +420,7 @@
 	\end{align*}
 	Dus $D = \sqrt{1} = 1$. De gezochte presentatie is dus $((5,2),1,210)$. Hiermee kunnen we weer een nieuwe variabele $E$ vinden, die de sleutel vormt voor een nieuwe presentatie. Hiervoor gebruiken we een formule uit het bewijs: $E = |2 z D  (x - y) (x+y)|$. Zo blijkt dan dat $E = |2 \cdot 29 \cdot 1 \cdot (21-20) (21+20)| = 2378$. De bijbehorende presentatie is $((841,840),2378,210)$.\\
 	
-	Dezelfde stappen kunnen we uitvoeren voor andere kwadraatvrije congruente getallen. De andere presentatie van $n=210$, zijnde $(35,12,37)$, blijkt $((6,1),1,210)$ te zijn en geeft $E = 79994$. De eerder gegeven presentatie van $n=6$, zijnde $(3,4,5)$, levert dan de presentatie $((2,1),1,6)$ en $E = 70$ op.
+	Dezelfde stappen kunnen we uitvoeren voor andere kwadraatvrije congruente getallen. De andere presentatie van $n=210$, zijnde $(35,12,37)$, blijkt $((6,1),1,210)$ te zijn en geeft $((1369,840),79994,210)$ als nieuwe presentatie. De eerder gegeven presentatie van $n=6$, zijnde $(3,4,5)$, geeft dan de presentatie $((2,1),1,6)$, waaruit de nieuwe presentatie $((25,24),70,6)$ volgt.
 	
 	
 	\section{Het bewijs van $n=1$}
