--- a/Werkstuk versie 3.tex
+++ b/Werkstuk versie 3.tex
@@ -196,8 +196,8 @@
 	\end{proof}
 		We weten nu dat $x$ en $y$ niet allebei even zijn, en dat ze ook niet allebei oneven zijn. Een van de getallen $x$ of $y$ moet dus per definitie oneven zijn en de ander moet per definitie even zijn. Hieruit volgt dat $z$ altijd een oneven getal is. Stel, $x$ en dus ook $x^2$ is even en $y$, dus ook $y^2$, is oneven (of precies andersom, zonder verlies van algemeenheid). De som van een oneven en een even getal is een oneven getal, waardoor $z^2$ en $z$ oneven zijn.
 
-	\section{Voorbeelden}\label{sec:vb}
-	De eerste negentien congruente getallen zijn: $5$, $6$, $7$, $13$, $14$, $15$, $21$, $22$, $23$, $29$, $30$, $31$, $34$, $37$, $38$, $39$, $41$, $46$, $47$, zie \cite{Coates}[p.19]. We zullen hieronder drie voorbeelden geven. Daarna zullen we bewijzen dat $n=1$ geen congruent getal is.\\
+	\section{Voorbeelden en $n=1$}\label{sec:vb}
+	De eerste negentien congruente getallen zijn: $5$, $6$, $7$, $13$, $14$, $15$, $21$, $22$, $23$, $29$, $30$, $31$, $34$, $37$, $38$, $39$, $41$, $46$, $47$, zie \cite{Coates}[p.19]. We zien dus dat bijvoorbeeld $n=1$ geen congruent getal is. Daar zullen we een bewijs voor geven, nadat we hieronder drie voorbeelden weergeven van driehoeken die corresponderen met een congruent getal.\\
 	\\
 	Het kleinste congruente getal is $5$. Dat correspondeert met de driehoek met de volgende zijden:
 	\begin{figure*}[h!]
@@ -254,7 +254,7 @@
 		\end{tikzpicture}
 	\end{figure*}\\
 	
-	We zullen hieronder bewijzen dat $n=1$ geen congruent getal is. Daarvoor bekijken we eerst een aantal benodigde stellingen en opmerkingen. Ook hebben we het begrip ``relatief priem" nodig: als twee getallen relatief priem zijn, wil dat zeggen dat ze geen factoren gemeen hebben, oftewel hun grootste gemene deler is 1.
+	We zullen hieronder bewijzen dat $n=1$ geen congruent getal is. \textcolor{red}{Je hebt hier een tweede zin die het bewijs voor $n=1$ aankondigt. Deze lijkt erg op, en komt erg snel na de eerdere zin waarin je dat doet (namelijk de laatste zin van de eerste alinea). Probeer iets als: 'Alvorens te bewijzen dat...' of iets in die geest.} Daarvoor bekijken we eerst een aantal benodigde stellingen en opmerkingen. Ook hebben we het begrip ``relatief priem" nodig: als twee getallen relatief priem zijn, wil dat zeggen dat ze geen factoren gemeen hebben, oftewel hun grootste gemene deler is 1.
 	
 	\begin{theorem}\label{1:hulp2}
 		Twee positieve gehele getallen die relatief priem zijn en waarvan het product een kwadraat is, moeten zelf kwadraten zijn.
@@ -267,11 +267,12 @@
 		Merk op dat als $xy$ een vierde macht is, dan zijn $x$ en $y$ ook vierde machten. We kunnen dit op dezelfde manier doen als bij stelling \ref{1:hulp2}. Laat $p$ een priemfactor zijn van $x$, maar niet van $y$. Dan weten we dat $p$ in viervoud moet voorkomen in $xy$, omdat $xy$ een vierde macht is en omdat $p$ niet in $y$ voorkomt. Hierdoor weten we ook dat $p$ in viervoud moet voorkomen in $x$. Dus $x$ is een vierde macht. We kunnen dit op dezelfde manier doen voor $y$, dus $y$ is een vierde macht.
 	\end{remark}
 	
-	We moeten nu ook nog iets weten over modulo rekenen.
+	We moeten nu ook nog iets weten over modulo rekenen. \textcolor{red}{Benoem specifieker wat je gaat doen. Of maak er een aankondigende zin van.}
+	
 	\begin{remark}\label{1:hulpMod}
 		Een even kwadraat is altijd $0 \pmod{4}$. Namelijk; een even getal is $0,2 \pmod{4}$, dus een even kwadraat is $0^2 \equiv 2^2 \equiv 0 \pmod{4}$. Een oneven kwadraat is altijd $1 \pmod{4}$. Namelijk; een oneven getal is $1,3 \pmod{4}$, dus een oneven kwadraat is $1^2 \equiv 3^2 \equiv 1 \pmod{4}$.
 	\end{remark}
-		
+	
 	We zullen nu de onderstaande stelling bewijzen.
 	\begin{theorem}
 		Het getal $n=1$ is geen congruent getal.
@@ -284,7 +285,7 @@
 		\end{equation}
 		We gaan laten zien dat (\ref{1:gedefineerd}) geen gehele positieve oplossingen heeft.\\
 		
-		Stel dat (\ref{1:gedefineerd}) een oplossing heeft in $\NO$, zeg $(a, b, c, d)$. Dan zullen we nu bewijzen dat er een oplossing is zodat $a$ en $b$ relatief priem zijn. Stel $\ggd(a,b) = g$. Dan weten we dat $g \mid a$ en $g \mid b$. Hieruit volgen twee resultaten samen met (\ref{1:gedefineerd}). Ten eerste weten we dat $g^2 \mid a^2$ en $g^2 \mid b^2$. Hieruit volgt dat $g^2 \mid a^2 + b^2$, dus $g^2 \mid c^2$, wat betekent dat $g \mid c$. Ten tweede weten we dat $g^2 \mid ab$, dus $g^2 \mid 2d^2$, waaruit volgt dat $g^2 \mid d^2$, met de volgende reden: Omdat $g^2 \mid 2d^2$, weten we dat $2\frac{d^2}{g^2} = x \in\NN$. Omdat $\frac{d^2}{g^2}$ een kwadraat is, weten we dat het een even aantal factoren $2$ bevat (omdat $\frac{d^2}{g^2}\in\QQ$ kan dit in principe ook een negatief aantal factoren 2 zijn). Dan bevat $2\frac{d^2}{g^2} = x$ dus een oneven aantal factoren $2$. Omdat er geldt dat $x \in\NN$ en omdat het een oneven aantal factoren 2 heeft, is $x$ een even getal. We kunnen de vergelijking aan beide kanten door $2$ delen. Dit geeft ons $\frac{d^2}{g^2}=\frac{x}{2} \in\NN$. Dus $g^2 \mid d^2$. Hieruit volgt dat $g \mid d$. We weten nu dus dat $g \mid a$, $g \mid b$, $g \mid c$ en $g \mid d$. We kunnen dus alle zijden door $g$ delen zodat we $a'$, $b'$, $c'$ en $d'$ krijgen die voldoen aan (\ref{1:gedefineerd}) met $\ggd(a',b') = 1$. Er is dus een oplossing $(a,b,c,d)$ voor vergelijking (\ref{1:gedefineerd}), zodat $\ggd(a,b)=1$. We gaan nu verder met bewijzen dat (\ref{1:gedefineerd}) geen gehele positieve oplossingen heeft, met de extra voorwaarde dat $\ggd(a,b) = 1$.\\
+		Stel dat (\ref{1:gedefineerd}) een oplossing heeft in $\NO$, zeg $(a, b, c, d)$. Dan zullen we nu bewijzen dat er een oplossing is zodat $a$ en $b$ relatief priem zijn. Stel $\ggd(a,b) = g$. Dan weten we dat $g \mid a$ en $g \mid b$. Hieruit volgen twee resultaten samen met (\ref{1:gedefineerd}). Ten eerste weten we dat $g^2 \mid a^2$ en $g^2 \mid b^2$. Hieruit volgt dat $g^2 \mid a^2 + b^2$, dus $g^2 \mid c^2$, wat betekent dat $g \mid c$. Ten tweede weten we dat $g^2 \mid ab$, dus $g^2 \mid 2d^2$, waaruit volgt dat $g^2 \mid d^2$, met de volgende reden: Omdat \textcolor{red}{'Omdat' behoeft geen hoofdletter} $g^2 \mid 2d^2$, weten we dat $2\frac{d^2}{g^2} = x \in\NN$. Omdat $\frac{d^2}{g^2}$ een kwadraat is, weten we dat het een even aantal factoren $2$ bevat (omdat $\frac{d^2}{g^2}\in\QQ$ kan dit in principe ook een negatief aantal factoren 2 zijn). Dan bevat $2\frac{d^2}{g^2} = x$ dus een oneven aantal factoren $2$. Omdat er geldt dat $x \in\NN$ en omdat het een oneven aantal factoren 2 heeft, is $x$ een even getal. We kunnen de vergelijking aan beide kanten door $2$ delen. Dit geeft ons $\frac{d^2}{g^2}=\frac{x}{2} \in\NN$. Dus $g^2 \mid d^2$. Hieruit volgt dat $g \mid d$. We weten nu dus dat $g \mid a$, $g \mid b$, $g \mid c$ en $g \mid d$. We kunnen dus alle zijden door $g$ delen zodat we $a'$, $b'$, $c'$ en $d'$ krijgen die voldoen aan (\ref{1:gedefineerd}) met $\ggd(a',b') = 1$. Er is dus een oplossing $(a,b,c,d)$ voor vergelijking (\ref{1:gedefineerd}), zodat $\ggd(a,b)=1$. We gaan nu verder met bewijzen dat (\ref{1:gedefineerd}) geen gehele positieve oplossingen heeft, met de extra voorwaarde dat $\ggd(a,b) = 1$.\\
 		
 		Laat $(a, b, c, d)$ een oplossing zijn met $\ggd(a,b) = 1$ en $c$ minimaal. Om te bewijzen dat de stelling waar is, zullen een nieuw viertal $a', b', c', d' \in\NO$ construeren, die voldoet aan (\ref{1:gedefineerd}) met $\ggd(a',b') = 1$ en $0 < c' < c$. Dit geeft een tegenspraak met de aanname dat $c$ minimaal is.\\
 		
@@ -292,11 +293,11 @@
 		\begin{equation*}
 			a = 2k^2 \quad \text{en} \quad b = l^2
 		\end{equation*}
-		voor $k,l\in\NO$ met $l$ oneven (omdat $b$ oneven is). Als we $a = 2k^2$ invullen in (\ref{1:gedefineerd}), krijgen we de vergelijking $4k^4 + b^2 = c^2$. Hieruit volgt, door factorisatie, dat $k^4 = \frac{c+b}{2}\frac{c-b}{2}$. We weten dat $b$ en $c$ beide oneven en relatief priem zijn, want als $c$ en $b$ niet relatief priem zijn, dan geldt er dat $\ggd(a,b)\neq1$ door $a^2 = c^2 - b^2$. We kunnen nu ook zeggen dat $\frac{c+b}{2}$ en $\frac{c-b}{2}$ relatief priem zijn, want stel $\ggd(\frac{c+b}{2},\frac{c-b}{2})=g$, dan geldt er dat $g$ de som deelt: $g \mid c$ en dat $g$ het verschil deelt: $g \mid b$. Aangezien $\ggd(b,c) = 1$, geldt er ook dat $\ggd(\frac{c+b}{2}, \frac{c-b}{2}) = 1$. We defini\"eren nu
+		voor $k,l\in\NO$ met $l$ oneven (omdat $b$ oneven is). Als we $a = 2k^2$ invullen in (\ref{1:gedefineerd}), krijgen we de vergelijking $4k^4 + b^2 = c^2$. Hieruit volgt, door factorisatie, dat $k^4 = \frac{c+b}{2}\frac{c-b}{2}$. \textcolor{red}{Zet een $\cdot$ tussen die twee breuken, dat ziet er netter uit.} We weten dat $b$ en $c$ beide oneven en relatief priem zijn, \textcolor{red}{'anders zou er gelden dat...' is mooier voor de rest van de zin} want als $c$ en $b$ niet relatief priem zijn, dan geldt er dat $\ggd(a,b)\neq1$ door $a^2 = c^2 - b^2$. We kunnen nu ook zeggen dat $\frac{c+b}{2}$ en $\frac{c-b}{2}$ relatief priem zijn, want stel $\ggd(\frac{c+b}{2},\frac{c-b}{2})=g$, dan geldt er dat $g$ de som deelt: $g \mid c$ en dat $g$ het verschil deelt: $g \mid b$. Aangezien $\ggd(b,c) = 1$, geldt er ook dat $\ggd(\frac{c+b}{2}, \frac{c-b}{2}) = 1$. We defini\"eren nu
 		\begin{equation}\label{1:bc}
 			r^4 = \frac{c+b}{2} \quad \text{en} \quad s^4 = \frac{c-b}{2}
 		\end{equation}
-		voor positieve gehele getallen $r$ en $s$ die relatief priem zijn, dit kan volgens opmerking \ref{1:hulp4}. Er geldt ook dat $r^4$ en $s^4$ relatief priem zijn, dus $r^2$ en $s^2$ zijn relatief priem en ook $r$ en $s$ zijn relatief priem. We lossen nu vergelijking (\ref{1:bc}) op voor $b$ en $c$, wat ons de volgende resultaten geeft:
+		voor positieve gehele getallen $r$ en $s$ die relatief priem zijn, dit kan volgens opmerking. \ref{1:hulp4} \textcolor{red}{Verander de komma in een punt (in de zin hiervoor), en maak er twee zinnen van. Of verander 'dit' in 'wat'.} Er geldt ook dat $r^4$ en $s^4$ relatief priem zijn, dus $r^2$ en $s^2$ zijn relatief priem en ook $r$ en $s$ zijn relatief priem. We lossen nu vergelijking (\ref{1:bc}) op voor $b$ en $c$, wat ons de volgende resultaten geeft:
 		\begin{equation*}
 			b = r^4 - s^4 \quad \text{en} \quad c = r^4 + s^4,
 		\end{equation*}
@@ -304,7 +305,7 @@
 		\begin{equation}\label{1:r}
 			t^2 = r^2 + s^2 \quad \text{en} \quad u^2 = r^2 - s^2
 		\end{equation}
-		voor oneven positieve gehele getallen $t$ en $u$, waarvoor geldt dat deze ook relatief priem zijn. We gebruiken nu opmerking \ref{1:hulpMod}; omdat $u$ oneven is, geldt er dat $u^2 \equiv 1 \pmod{4}$, dus $r^2 - s^2 \equiv 1 \pmod{4}$. Hieruit volgt dat $r$ oneven is, dus is $s$ even. Namelijk: Er moet gelden dat $r$ en $s$ verschillende pariteit hebben, want anders geldt er dat $r^2 - s^2 \equiv 0 \pmod{4}$. Stel nu dat $r$ is even, dan is $s$ oneven. Er geldt nu dat $r^2 \equiv 0 \pmod{4}$ en $s^2 \equiv 1 \pmod{4}$. Dit levert op: $r^2 - s^2 \equiv -1 \equiv 3 \pmod{4}$ en dat kan niet. We weten dus dat $r$ oneven is en dat $s$ even is. Nu lossen we  (\ref{1:r}) op voor $r^2$. Dit geeft ons:
+		voor oneven positieve gehele getallen $t$ en $u$, waarvoor geldt dat deze ook relatief priem zijn. We gebruiken nu opmerking \ref{1:hulpMod}; omdat $u$ oneven is, geldt er dat $u^2 \equiv 1 \pmod{4}$, dus $r^2 - s^2 \equiv 1 \pmod{4}$. Hieruit volgt dat $r$ oneven is, dus is $s$ even. Namelijk: Er \textcolor{red}{Geen hoofdletter} moet gelden dat $r$ en $s$ verschillende pariteit hebben, want anders geldt er dat $r^2 - s^2 \equiv 0 \pmod{4}$. Stel nu dat $r$ is even, dan is $s$ oneven. Er geldt nu dat $r^2 \equiv 0 \pmod{4}$ en $s^2 \equiv 1 \pmod{4}$. Dit levert op: $r^2 - s^2 \equiv -1 \equiv 3 \pmod{4}$ en dat kan niet. We weten dus dat $r$ oneven is en dat $s$ even is. Nu lossen we  (\ref{1:r}) op voor $r^2$. Dit geeft ons:
 		\begin{equation*}
 			r^2 = \frac{t^2 + u^2}{2} = \left( \frac{t+u}{2} \right)^2 + \left( \frac{t-u}{2} \right)^2,
 		\end{equation*}
@@ -314,11 +315,14 @@
 		\end{equation*}
 		Er geldt dat $\ggd(a',b') = 1$, om dezelfde reden dat de eerder genoemde factoren $\frac{c+b}{2}$ en $\frac{c-b}{2}$ relatief priem zijn. Als we gebruik maken van (\ref{1:r}), vinden we dat $a'b' = \frac{t^2 - u^2}{4} = \frac{2s^2}{4} = 2\left( \frac{s}{2} \right)^2$. Laat $d' = \frac{s}{2} \in\ZZ$, dan hebben we nu een nieuwe oplossing $(a', b', c', d')$ voor (\ref{1:gedefineerd}). Er geldt dat $0 < c'= r \leq r^4 < r^4 + s^4 = c$. Dit geeft een tegenspraak, omdat $c$ minimaal is. Dus (\ref{1:gedefineerd}) heeft geen positieve gehele oplossingen, dus $n=1$ is niet congruent.
 	\end{proof}
-
-
+	\textcolor{red}{(Geen commentaar waar je iets mee moet gaan doen, maar ik wil het toch maar even gezegd hebben.) Jezus, wat is dit bewijs lang.}\\
+	\textcolor{red}{Commentaar waar je eventueel wel iets mee kan doen: het bewijs van $n=1$ tot een apart hoofdstuk maken, en dat na het 'Congruente getallen vinden' doen. (Eventueel ook na het hoofdstuk 'Presentaties', maar dat is persoonlijke voorkeur.) Lijkt mij een iets logischere volgorde, zeker gezien de laatste zin van het hoofdstuk 'Congruente getallen vinden'. Je hoeft dan alleen maar iets te veranderen in de eerste alinea van het kopje voorbeelden.}
+	
+	
 	\section{Congruente getallen vinden}\label{sec:suus}
 	Voor dit hoofdstuk hebben we gebruik gemaakt van \cite{Koblitz}[p.3-4].\\
-	We weten dat een congruent getal $n$ een geheel getal is dat de oppervlakte is van een driehoek met rationale zijden. We willen nu graag weten welke getallen $m\in\NN$ congruent zijn. Als we dat willen doen met de kennis van nu, moeten we voor elke $m$ gaan kijken of we een driehoek kunnen vinden met zijden in $\QQ$ zodat de oppervlakte van deze driehoek gelijk is aan $m$. Het is niet moeilijk om te bedenken dat dat een onmogelijke zaak is, zelfs als we de computer laten rekenen. Dus moeten we op zoek gaan naar een manier om het aantal mogelijke getallen $m\in\NN$ te verminderen. Om te kijken hoe we dat kunnen doen, kijken we eerst naar de volgende driehoek:
+	
+	We weten dat een congruent getal $n$ een geheel getal is\textcolor{red}{,} dat de oppervlakte is van een driehoek met rationale zijden. We willen nu graag weten welke getallen $m\in\NN$ congruent zijn. Als we dat willen doen met de kennis van nu, moeten we voor elke $m$ gaan kijken of we een driehoek kunnen vinden met zijden in $\QQ$ zodat de oppervlakte van deze driehoek gelijk is aan $m$. Het is niet moeilijk om te bedenken dat dat een onmogelijke \textcolor{red}{Ik geloof dat je hier 'onbegonnen' bedoelt, in plaats van 'onmogelijke'} zaak is, zelfs als we de computer laten rekenen. Dus moeten we op zoek gaan naar een manier om het aantal mogelijke getallen $m\in\NN$ te verminderen. Om te kijken hoe we dat kunnen doen, kijken we eerst naar de volgende driehoek:
 	\begin{figure}[h!]
 		\centering
 		\begin{tikzpicture}[xscale=2, yscale=1]
@@ -369,14 +373,14 @@
 	We zien dat $s^2r\in\NN$ ook een congruent getal is, want de zijden van de driehoek bevinden zich in $\QQ$. Als we nu willen zoeken naar congruente getallen, kunnen we dus ook kijken naar alle kwadraatvrije\footnote{Een kwadraatvrij getal is een getal dat niet deelbaar is door een kwadraat groter dan $1$. Waarbij een kwadraat een getal $k\in\NN$ zodat $\sqrt{k}\in\NN$. \cite{Beukers}} getallen $m'\in\NN$. Namelijk: door het zojuist gegeven voorbeeld zien we dat we $r$ met een willekeurig kwadraat uit $\NN$ kunnen vermenigvuldigen zonder dat het zijn eigenschappen verliest, het is dan nog steeds een congruent getal.\\
 	
 	We kunnen dit proces ook omgekeerd uitvoeren. Stel we hebben een congruent getal $r$ dat niet kwadraatvrij is. Dit betekent dat er een kwadraat $s^2\in\NN$ bestaat waar we $r$ door kunnen delen. We kunnen de zijden van de driehoek delen door $s$. Nu hebben we een congruent getal $\frac{r}{s^2}$ met het bijbehorende Pythagore\"ische drietal $(\frac{x}{s}, \frac{y}{s}, \frac{z}{s})$. We kunnen dit proces net zolang herhalen totdat we een kwadraatvrij congruent getal hebben gevonden.\\
-
+	
 	We hebben nu dus gezien dat we alleen nog maar hoeven te kijken naar kwadraatvrije getallen. We nemen vanaf nu dus aan dat $n$ een kwadraatvrij congruent getal is. Dat betekent dat we al een stuk sneller door $\NN$ kunnen gaan om te kijken welke getallen congruent zijn. Sterker nog: er betstaat een algoritme dat voor elke $m'\in\NN$ checkt of er een Pythagore\"isch drietal bestaat zodat $m'$ de oppervlakte is van de driehoek die hoort bij dit Pythagore\"isch drietal. Als $m'$ congruent is, zet het algoritme $m'$ in een lijst. Helaas weten we niet of een getal dat niet in de lijst staat, ook daadwerkelijk geen congruent getal is. Het kan namelijk ook zo zijn dat het algoritme te lang moest zoeken naar een Pythagore\"isch drietal, waardoor het zoeken tijdig is afgebroken. Dit is dus nog steeds geen optimale manier om naar congruente getallen te zoeken. We zoeken dus eigenlijk nog steeds naar een formule die ons kan vertellen of een getal wel of niet congruent is. Daarvoor introduceren we eerst de stelling van Tunnell:
 	\begin{theorem}\label{def:tunnell}
 		\cite{Koblitz}[p.212, vertaald] (Tunnell, 1983) Als $n$ een kwadraatvrij en oneven (respectievelijk even) positief geheel getal is en $n$ is de oppervlakte van een rechthoekige driehoek met rationale zijden, dan
 		\begin{align}
-		\label{vgl:oneven} \#\{x,y,z\in\ZZ \mid n=2x^2+y^2+32z^2\} = \frac{1}{2} \#\{x,y,z\in\ZZ \mid n=2x^2+y^2+8z^2\}\\
-		\notag \text{(respectievelijk} \\
-		\label{vgl:even} \#\{x,y,z\in\ZZ \mid \frac{n}{2}=4x^2+y^2+32z^2\} = \frac{1}{2} \#\{x,y,z\in\ZZ \mid \frac{n}{2}=4x^2+y^2+8z^2\})
+			\label{vgl:oneven} \#\{x,y,z\in\ZZ \mid n=2x^2+y^2+32z^2\} = \frac{1}{2} \#\{x,y,z\in\ZZ \mid n=2x^2+y^2+8z^2\}\\
+			\notag \text{(respectievelijk \textcolor{red}{Je kunt de haken weglaten}} \\
+			\label{vgl:even} \#\{x,y,z\in\ZZ \mid \frac{n}{2}=4x^2+y^2+32z^2\} = \frac{1}{2} \#\{x,y,z\in\ZZ \mid \frac{n}{2}=4x^2+y^2+8z^2\})
 		\end{align}
 		Omgekeerd, als het zwakke vermoeden van Birch en Swinnerton-Dyer waar is voor de elliptische krommen $E_n:y^2=x^3-n^2x$, dan, impliceren deze gelijkheden dat $n$ een congruent getal is.
 	\end{theorem}
