--- a/Werkstuk versie 3.tex
+++ b/Werkstuk versie 3.tex
@@ -195,7 +195,7 @@
 			 &= 4 \delta^2 \\
 			 &= z^2.
 		 \end{align*}
-		 We weten nu dus dat correspondentie \ref{prop:corr1} en \ref{prop:corr2} gelden. Het enige wat we nu nog moeten laten zien, is dat twee verschillende drietallen $(x,y,z)$ nooit dezelfde $\delta$ op kunnen leveren. {\color{red}Dit kunnen we doen door te laten zien dat twee Pythagoredrietallen nooit dezelfde $\delta = \frac{z}{2}$ op kunnen leveren.}
+		 We weten nu dus dat correspondentie \ref{prop:corr1} en \ref{prop:corr2} gelden. Het enige wat we nu nog moeten laten zien, is dat twee verschillende Pythagore\"ische drietallen $(x,y,z)$ nooit dezelfde $\delta$ op kunnen leveren. {\color{red}Dit kunnen we doen door te laten zien dat twee Pythagore\"ische drietallen nooit dezelfde $\delta = \frac{z}{2}$ op kunnen leveren.}
 		 
 		 
 		 
